updated launcher