@@ -14,13 +14,22 @@ import java.nio.file.Files;
 public class Main extends JFrame {
 
 
+    private static File getRelativePath(String relativePath) {
+        File currentDir = new File(System.getProperty("user.dir"));
+        //If relativePath starts with ../ set currentDir up one level
+        while (relativePath.startsWith("../") || relativePath.startsWith("..\\")) {
+            currentDir = currentDir.getParentFile();
+            relativePath = relativePath.substring(3);
+        }
+        return new File(currentDir, relativePath);
+    }
+
     public static void main(String[] args) {
         try {
             File currentDir = new File(System.getProperty("user.dir"));
             System.out.println("Current dir: " + currentDir.getAbsolutePath());
-
-            //Load the config.txt file as a local directory
             File config = new File(currentDir, "config.txt");
+
             if (!config.exists()) {
                 //Create the config.txt file
                 String str = "XB2\t" +
@@ -37,42 +46,46 @@ public class Main extends JFrame {
             //Read the config.txt file
             String[] lines = new String(Files.readAllBytes(config.toPath())).split("\n");
 
-            File xbuilders2Directory = null;
-            File xbuilder3Directory = null;
-
-            String xbuilders2Name = null;
-            String xbuilder3Name = null;
-
+            File xbuilders2File = null;
+            File xbuilder3File = null;
             for (int i = 0; i < lines.length; i++) {
                 lines[i] = lines[i].trim();
                 String[] parts = lines[i].split("\t");
 
                 if (parts[0].equals("XB2")) {
-                    xbuilders2Directory = new File(currentDir.getParentFile().getAbsolutePath(), parts[1]);
-                    xbuilders2Name = parts[2];
+                    xbuilders2File = getRelativePath(parts[1]);
                 } else if (parts[0].equals("XB3")) {
-                    xbuilder3Directory = new File(currentDir.getParentFile().getAbsolutePath(), parts[1]);
-                    xbuilder3Name = parts[2];
+                    xbuilder3File = getRelativePath(parts[1]);
                 }
             }
 
-            File xb2File = new File(xbuilders2Directory, xbuilders2Name);
-            File xb3File = new File(xbuilder3Directory, xbuilder3Name);
-
-            if (!xb2File.exists()) {
-                createPopupWindow("Error", "XBuilders 2 not found:\n \"" + xb2File.getAbsolutePath() + "\"");
+            System.out.println("XBuilders 2 path: " + xbuilders2File.getAbsolutePath());
+            System.out.println("XBuilders 3 path: " + xbuilder3File.getAbsolutePath());
+            if (!xbuilders2File.exists()) {
+                createPopupWindow("Error", "XBuilders 2 not found:\n \"" + xbuilders2File.getAbsolutePath() + "\"");
             }
 
-            if (!xb3File.exists()) {
-                createPopupWindow("Error", "XBuilders 3 not found:\n \"" + xb3File.getAbsolutePath() + "\"");
+            if (!xbuilder3File.exists()) {
+                createPopupWindow("Error", "XBuilders 3 not found:\n \"" + xbuilder3File.getAbsolutePath() + "\"");
             }
+
+
+            //Remove the filenamef rom the path and  put it in the name
+            String xbuilders2Name = xbuilders2File.getName();
+            File xbuilders2Dir = xbuilders2File.getParentFile();
+            String xbuilder3Name = xbuilder3File.getName();
+            File xbuilder3Dir = xbuilder3File.getParentFile();
+            System.out.println("\nXBuilders 2 name: " + xbuilders2Name);
+            System.out.println("XBuilders 3 name: " + xbuilder3Name);
+            System.out.println("XBuilders 2 dir: " + xbuilders2Dir.getAbsolutePath());
+            System.out.println("XBuilders 3 dir: " + xbuilder3Dir.getAbsolutePath());
 
 
             new Main(
                     xbuilders2Name,
                     xbuilder3Name,
-                    xbuilders2Directory,
-                    xbuilder3Directory,
+                    xbuilders2Dir,
+                    xbuilder3Dir,
                     "");
         } catch (Exception e) {
             e.printStackTrace();
@@ -86,6 +99,7 @@ public class Main extends JFrame {
     private JButton XB3;
     private JLabel titleLabel;
     private JButton exitButton;
+    private JCheckBox runAsTerminal;
 
 
     Font font;
@@ -95,7 +109,8 @@ public class Main extends JFrame {
     final Color BUTTON_HOVERED = new Color(50, 50, 200);
     final int BUTTON_SIZE = 48;
 
-    public Main(String xb2command, String xb3command,
+
+    public Main(String xb2jarfile, String xb3jarfile,
                 File xb2dir, File xb3dir, String args) throws IOException, FontFormatException {
         super("XBuilders Launcher");
         setSize(450, 310);
@@ -146,10 +161,12 @@ public class Main extends JFrame {
         exitButton.addActionListener(e -> dispose());
 
         styleButton(XB2, () -> {
-            runProgram("java -jar \"" + xb2dir.getAbsolutePath() + "\\" + xb2command + "\" " + args, xb2dir);
+            runProgram(xb2dir, xb2jarfile, args,
+                    runAsTerminal.isSelected());
         });
         styleButton(XB3, () -> {
-            runProgram("java -jar \"" + xb3dir.getAbsolutePath() + "\\" + xb3command + "\" " + args, xb3dir);
+            runProgram(xb3dir, xb3jarfile, args,
+                    runAsTerminal.isSelected());
         });
 
         setVisible(true);
@@ -186,13 +203,29 @@ public class Main extends JFrame {
         });
     }
 
-    public void runProgram(String command, File workingDir) {
-        System.out.println("command: " + command + "\n\n" + "workingDir: \"" + workingDir.getAbsolutePath() + "\"");
+    public void runProgram(File workingDir, String jarfile, String args, boolean runAsTerminal) {
         try {
-            Runtime.getRuntime().exec(command, null, workingDir);
-        } catch (IOException e) {
+            if (runAsTerminal) {
+                String command = "java -jar \\\"" + jarfile + "\\\" " + args;
+                System.out.println(command);
+                // Create a ProcessBuilder to run PowerShell in a new window
+                ProcessBuilder pb = new ProcessBuilder("cmd.exe", "/c", "start",
+                        "powershell.exe", "-NoExit", "-Command", command);
+                pb.directory(workingDir);
+                pb.redirectErrorStream(true);
+                Process process = pb.start();
+
+                // Wait for the process to complete (It will still close because we are just starting a new window)
+                process.waitFor();
+            } else {
+                String command = "java -jar \"" + jarfile + "\" " + args;
+                System.out.println(command);
+                Runtime.getRuntime().exec(command, null, workingDir);
+            }
+        } catch (IOException | InterruptedException e) {
             createPopupWindow("Error",
-                    "command: " + command + "\n\n" +
+                    "Jarfile: \"" + jarfile + "\"\n\n" +
+                            "args: \"" + args + "\"\n\n" +
                             "workingDir: \"" + workingDir.getAbsolutePath() + "\"\n\n" + e.toString());
         }
     }
